fix: make browser window and media players opaque

--- a/arch/dot-config/hypr/windows.conf
+++ b/arch/dot-config/hypr/windows.conf
@@ -6,11 +6,9 @@ windowrule = tile, class:^(chromium)$
 
 # Just dash of opacity
 windowrule = opacity 0.97 0.9, class:.*
-windowrule = opacity 1 0.97, class:^(chromium|google-chrome|google-chrome-unstable)$
-windowrule = opacity 0.97 0.9, initialClass:^(chrome-.*-Default)$ # web apps
 
-# Disable blur effect around context menus in Brave Browser
-windowrule = opacity 100 100, title:(.*)(Brave)$
+# Opaque windows
+windowrule = opaque, class:^(Brave-browser|com.stremio.stremio|mpv|vlc)$
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
