feat: bind to launch emoji picker

--- a/arch/dot-config/hypr/bindings.conf
+++ b/arch/dot-config/hypr/bindings.conf
@@ -91,3 +91,6 @@ bind = SUPER SHIFT, P, exec, hyprpicker -a
 
 # Clipboard history
 bind = CTRL SUPER, V, exec, kitty --class clipse -e clipse
+
+# Emoji picker
+bind = SUPER, PERIOD, exec, emote
