fix: hypridle config

--- a/arch/dot-config/hypr/hypridle.conf
+++ b/arch/dot-config/hypr/hypridle.conf
@@ -10,7 +10,18 @@ listener {
 }
 
 listener {
-    timeout = 630                                            # 10min30s
+    timeout = 630                        # 10min30s
+    on-timeout = brightnessctl -s set 10 # monitor brightness to minimum
+    on-resume = brightnessctl -r         # restore brightness
+}
+
+listener {
+    timeout = 900                                            # 15min
     on-timeout = hyprctl dispatch dpms off                   # screen off when timeout has passed
     on-resume = hyprctl dispatch dpms on && brightnessctl -r # screen on when activity is detected
+}
+
+listener {
+    timeout = 1800                  # 30min
+    on-timeout = systemctl suspend  # suspend PC
 }
