--- a/arch/dot-config/kitty/kitty.conf
+++ b/arch/dot-config/kitty/kitty.conf
@@ -4,7 +4,7 @@
 include nord-theme.conf
 # END_KITTY_THEME
 
-font_family     CaskaydiaMono Nerd Font
+font_family     JetBrainsMono Nerd Font Propo
 font_size       10.0
 
 window_padding_width    16.0
