--- a/arch/dot-config/hypr/input.conf
+++ b/arch/dot-config/hypr/input.conf
@@ -8,7 +8,8 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0
+    sensitivity = -1
+    force_no_accel = true
 
     touchpad {
         natural_scroll = false
