feat: android studio setup

--- a/arch/dot-config/hypr/windows.conf
+++ b/arch/dot-config/hypr/windows.conf
@@ -8,7 +8,7 @@ windowrule = tile, class:^(chromium)$
 windowrule = opacity 0.97 0.9, class:.*
 
 # Opaque windows
-windowrule = opaque, class:^(Brave-browser|com.stremio.stremio|mpv|vlc)$
+windowrule = opaque, class:^(Brave-browser|com.stremio.stremio|mpv|vlc|Emulator)$
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
@@ -20,3 +20,5 @@ layerrule = blur,wofi
 windowrule = float, class:(clipse)
 windowrule = size 622 652, class:(clipse)
 windowrule = stayfocused, class:(clipse)
+
+windowrule = float, initialClass:^(Emulator)$
